# yadro-cpp-code-test-Kashenin

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: config.hpp  console_parser.hpp  console_writer.hpp  emulation_handler.hpp  file_reader.hpp  ireader.hpp  iwriter.hpp  my_exception.hpp  repository.hpp  start_info.hpp  time_formatter.hpp
include/rows/: input_row_factory.hpp  input_rows.hpp  irow_info.hpp  output_rows.hpp
src/: console_parser.cpp  console_writer.cpp  emulation_handler.cpp  file_reader.cpp  my_exception.cpp  repository.cpp  start_info.cpp  time_formatter.cpp
src/rows/: input_row_factory.cpp  input_rows.cpp  input_rows_steps.cpp  irow_info.cpp  output_rows.cpp
test/: test.txt  test_client_waiting_with_seat.txt  test_end_of_day_sorting.txt  test_event_logic.cpp  test_integration.cpp  test_outside_hours.txt  test_queue_full.txt  test_queue_overflow.txt  test_repository.cpp  test_row_info.cpp  test_start_info.cpp  test_table_switching.txt  test_time_formatter.cpp  test_unknown_table.txt
